# actinia-stac-plugin

./: .bandit.yml  .coverage  .dockerignore  .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  README.md  actinia-module.md  actinia-stac.md  pyproject.toml  requirements_stac.txt  ruff.toml  setup.cfg  setup.py  tests_with_kvdb.sh  tests_with_redis.sh
.github/workflows/: docker.yml  linter.yaml  linting.yml  mega-linter.yaml  mega-linter.yml  python-publish.yml  test.yml
actinia_stac_plugin/: __init__.py  endpoints.py  main.py
actinia_stac_plugin.wsgi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
actinia_stac_plugin/api/: stac.py  stac_catalogs.py  stac_collection_id.py  stac_collections.py  stac_instance_id.py  stac_instances.py  stac_items.py
actinia_stac_plugin/apidocs/: schemas.py  stac.py  stac_catalogs_docs.py  stac_collections_docs.py  stac_collections_id_docs.py  stac_instances_docs.py  stac_instances_id_docs.py  stac_items_docs.py
actinia_stac_plugin/core/: common.py  stac.py  stac_catalogs.py  stac_collection_id.py  stac_collections.py  stac_instance_id.py  stac_instances.py  stac_items.py  stac_redis_interface.py
config/: actinia-module-plugin.cfg
docker/: README.md
tests/: conftest.py  test_main.py  test_modules.py  test_modules_actinia_global.py  test_modules_actinia_user.py  test_modules_grass.py  test_processing_global.py  test_processing_user.py  test_resources_cli.py  test_stac.py  test_stac_a_instances.py  test_stac_b_instance_id.py  test_stac_c_collection_id.py  test_stac_collection_id.py  test_stac_collections.py  test_stac_d_collections.py  test_stac_instance_id.py  test_stac_instances.py  test_templates.py  testsuite.py
(+49 files in other folders)
